# tic_rng_toe

./: Cargo.toml  LICENSE  README.md
src/: README  README~  main.rs  main.rs~
