[package]
name = "tic_rng_toe"
version = "0.1.0"
authors = ["Raffael Di Iorio"]
edition = "2021"
description = "Implementation of tic-tac-toe for one player where the computer places his marks pseudorandomly."
readme = "README.md"
homepage = "https://rdiiorio.ch"
repository = "https://github.com/Elderberryz/tic_rng_toe"
license = "MIT"
keywords = ["tic-tac-toe", "noughts and crosses", "Xs and Os", "random", "games"]
categories = ["games", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"